--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-streamlit_authenticator==0.1.5
-
-
-deta==1.1.0
-
-python-dotenv==0.21.0
+opencv-python
+streamlit
+torch
+Pillow
+numpy
+easyocr
+pandas
+pdf2image
+deta
+python-dotenv
+fastapi
+uvicorn
+requests
+streamlit-authenticator
